tests/semantic_errors/andrei19_6.tl
require"ifj21"

-- wrong arithm types
function main()
    local id : integer = "str"//       "str"
    return
end

main()
